--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "outDir": "dist/js",
     "noEmitOnError": true,
     "noImplicitAny": true,
+    "removeComments": true,
+    "strictNullChecks": true,
     "baseUrl": "./src",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
